# GameEngineDevelopingCourse

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  default.vsconfig  generate_vs2022.bat  get_submodules.bat
Engine/Editor/: CMakeLists.txt
Engine/Editor/private/: GameEditor.cpp  main.cpp
Engine/Editor/private/EditorECS/: ecsEditor.cpp
Engine/Editor/private/LevelEditor/: LevelEditor.cpp  LevelSerializer.cpp  LevelSerializer.h
Engine/Editor/private/LevelEditor/ECS/: ecsLevelEditor.cpp  ecsLevelEditor.h
Engine/Editor/public/: GameEditor.h
Engine/Editor/public/EditorECS/: ecsEditor.h
Engine/Editor/public/LevelEditor/: LevelEditor.h
Engine/Source/AudioEngine/: CMakeLists.txt
Engine/Source/AudioEngine/private/: AudioEngine.cpp
Engine/Source/AudioEngine/public/: AudioEngine.h
Engine/Source/AudioSystem/: CMakeLists.txt
Engine/Source/AudioSystem/private/: AudioDataBase.cpp  AudioSystem.cpp  SoundFilePaths.cpp
Engine/Source/AudioSystem/public/: AudioDataBase.h  AudioSystem.h  SoundFilePaths.h
Engine/Source/Core/: CMakeLists.txt
Engine/Source/Core/private/: Camera.cpp  CommandLine.cpp  EventManager.cpp  FileSystem.cpp  PackedVariables.cpp  Timer.cpp
Engine/Source/Core/private/Input/: ActionMapEventManager.cpp  Buttons.cpp  Controller.cpp  InputHandler.cpp
Engine/Source/Core/private/Math/: Matrix.cpp  Vector.cpp
Engine/Source/Core/public/: Camera.h  CommandLine.h  EventManager.h  FileSystem.h  PackedVariables.h  Threads.h  Timer.h  array.h
Engine/Source/Core/public/Debug/: Assertions.h  Console.h
Engine/Source/Core/public/Input/: ActionMapEventManager.h  Buttons.h  Controller.h  InputHandler.h
Engine/Source/Core/public/Math/: Constants.h  MathHelper.h  Matrix.h  Vector.h
Engine/Source/Core/public/Window/: IWindow.h
Engine/Source/Core/public/WindowHandle/: IWindowHandle.h
Engine/Source/EntitySystem/: CMakeLists.txt
Engine/Source/EntitySystem/private/: EntityManager.cpp  EntitySystem.cpp
Engine/Source/EntitySystem/private/ECS/: ecsSystems.cpp
Engine/Source/EntitySystem/public/: EntityManager.h  EntitySystem.h
Engine/Source/EntitySystem/public/ECS/: ecsSystems.h
Engine/Source/GUI/: CMakeLists.txt
Engine/Source/GUI/private/: GUIContext.cpp
Engine/Source/GUI/public/: GUIContext.h  UIWindow.h
Engine/Source/Game/: CMakeLists.txt
Engine/Source/Game/private/: Game.cpp  GameObject.cpp
Engine/Source/Game/public/: Game.h  GameObject.h
Engine/Source/Math/: CMakeLists.txt
Engine/Source/Math/private/: Matrix.cpp  Quaternion.cpp  Vector.cpp
Engine/Source/Math/public/: Constants.h  MathHelper.h  Matrix.h  Quaternion.h  Vector.h
Engine/Source/RHI/Direct3D12/: CMakeLists.txt
Engine/Source/RHI/Direct3D12/private/: D3D12RHI.cpp
Engine/Source/RHI/Direct3D12/public/: D3D12RHI.h
Engine/Source/RHI/Direct3D12RHI/: CMakeLists.txt
Engine/Source/RHI/Direct3D12RHI/private/: D3D12DescriptorHeap.cpp  D3D12DescriptorHeap.h  D3D12Material.cpp  D3D12Mesh.cpp  D3D12RHI.cpp  D3D12RHIBuffer.cpp  D3D12RHIBuffer.h  D3D12RHICommandAllocator.cpp  D3D12RHICommandAllocator.h  D3D12RHICommandList.cpp  D3D12RHICommandList.h  D3D12RHICommandQueue.cpp  D3D12RHICommandQueue.h  D3D12RHIContext.cpp  D3D12RHICore.cpp  D3D12RHICore.h  D3D12RHIDevice.cpp  D3D12RHIDevice.h  D3D12RHIFactory.cpp  D3D12RHIFactory.h  D3D12RHIFence.cpp  D3D12RHIFence.h  D3D12RHIPipelineStateObject.cpp  D3D12RHIPipelineStateObject.h  D3D12RHIPrivate.cpp  D3D12RHIPrivate.h  D3D12RHISwapChain.cpp  D3D12RHISwapChain.h  D3D12RHITechnique.cpp  D3D12RHITechnique.h  D3D12RHITexture.cpp  D3D12RHITexture.h  D3D12UploadBuffer.h  D3D12Util.h
Engine/Source/RHI/Direct3D12RHI/public/: D3D12DescriptorHeap.h  D3D12Material.h  D3D12Mesh.h  D3D12RHI.h  D3D12RHIContext.h  D3D12RHICore.h
Engine/Source/RHI/RHI/: CMakeLists.txt
Engine/Source/RHI/RHI/public/: Material.h  Mesh.h  RHIAdapter.h  RHIBuffer.h  RHICommandAllocator.h  RHICommandList.h  RHICommandQueue.h  RHICommon.h  RHIContext.h  RHICore.h  RHIDevice.h  RHIFactory.h  RHIFence.h  RHIMaterial.h  RHIMesh.h  RHIPipelineStateObject.h  RHISwapChain.h  RHITechnique.h  RHITexture.h  RenderData.h
Engine/Source/RHI/VulkanRHI/: CMakeLists.txt
Engine/Source/RHI/VulkanRHI/private/: VulkanRHIBuffer.cpp  VulkanRHIBuffer.h  VulkanRHICommandAllocator.cpp  VulkanRHICommandAllocator.h  VulkanRHICommandList.cpp  VulkanRHICommandList.h  VulkanRHICommandQueue.cpp  VulkanRHICommandQueue.h  VulkanRHIContext.cpp  VulkanRHICore.cpp  VulkanRHICore.h  VulkanRHIDevice.cpp  VulkanRHIDevice.h  VulkanRHIFactory.cpp  VulkanRHIFactory.h  VulkanRHIFence.cpp  VulkanRHIFence.h  VulkanRHIPipelineStateObject.cpp  VulkanRHIPipelineStateObject.h  VulkanRHISwapChain.cpp  VulkanRHISwapChain.h  VulkanRHITechnique.cpp  (+5 more)
Engine/Source/RenderCore/: CMakeLists.txt
Engine/Source/RenderCore/private/: Colors.cpp  Geometry.cpp  RenderCore.cpp
Engine/Source/RenderCore/public/: Colors.h  DefaultGeometry.h  Geometry.h  RenderCore.h
Engine/Source/RenderEngine/: CMakeLists.txt
Engine/Source/RenderEngine/private/: RenderCommands.h  RenderEngine.cpp  RenderObject.cpp  RenderThread.cpp
Engine/Source/RenderEngine/public/: Material.h  RenderCommand.h  RenderEngine.h  RenderObject.h  RenderThread.h
Engine/Source/ScriptSystem/: CMakeLists.txt
Engine/Source/ScriptSystem/private/: Script.cpp  ScriptManager.cpp
Engine/Source/ScriptSystem/public/: Script.h  ScriptManager.h
Engine/Source/World/: CMakeLists.txt
Engine/Source/World/private/: GameWorld.cpp  Level.cpp  LevelObject.cpp
Engine/Source/World/public/: GameWorld.h  Level.h  LevelObject.h
Samples/SimpleScene/: CMakeLists.txt  CMakePresets.json  generate_vs2022.bat
Samples/SimpleScene/Assets/Configs/: Input_default.ini
Samples/SimpleScene/Assets/Levels/: main.xml
Samples/SimpleScene/Assets/Scripts/: Collision.lua  DeathTimer.lua  Objects.lua  Physics.lua  Script.lua
Samples/SimpleScene/Source/: CMakeLists.txt
Samples/SimpleScene/Source/private/: ecsAudio.cpp  ecsControl.cpp  ecsMesh.cpp  ecsPhys.cpp
Samples/SimpleScene/Source/public/: ecsAudio.h  ecsControl.h  ecsMesh.h  ecsPhys.h
(+32 files in other folders)
